Fixed rectangle color and text alignement

--- a/src/pages/home/why/index.module.scss
+++ b/src/pages/home/why/index.module.scss
@@ -29,7 +29,7 @@
     }
 
     &.unselected {
-        background-color: $white;
+        background-color: transparent;
     }
 }
 
@@ -141,7 +141,7 @@
 
     color: $black;
     background-color: transparent;
-    text-align: right;
+    text-align: left;
     font-size: 1rem;
     font-weight: 400;
     margin: 0rem 0.0828125rem;
@@ -174,7 +174,7 @@
     }
 
     &.unselected {
-        background-color: $white;
+        background-color: transparent;
     }
 }
 
