--- a/src/pages/membership/prices/index.module.scss
+++ b/src/pages/membership/prices/index.module.scss
@@ -21,7 +21,7 @@
     }
 
     &.unselected {
-        background-color: $white;
+        background-color: transparent;
     }
 }
 
